--- a/index.html
+++ b/index.html
@@ -6,33 +6,133 @@
     <title>Excel to JSON Converter</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script> <!-- Include SheetJS Library -->
     <style>
+        /* Reset some default browser styling */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
+            font-family: 'Poppins', Arial, sans-serif;
+            background-color: #f5f7fa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
         }
-        input[type="file"] {
+
+        h1 {
+            font-size: 2rem;
             margin-bottom: 20px;
+            text-align: center;
+            color: #333;
         }
-        pre {
+
+        .container {
+            background-color: white;
+            max-width: 600px;
+            padding: 30px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
+        .upload-box {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f0f4f8;
+            border: 2px dashed #b0bec5;
+            padding: 30px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        .upload-box:hover {
+            background-color: #e3f2fd;
+        }
+
+        input[type="file"] {
+            border: none;
+            padding: 10px;
+            font-size: 1rem;
+            cursor: pointer;
+            color: #1e88e5;
+        }
+
+        .upload-btn {
+            display: inline-block;
+            background-color: #1e88e5;
+            color: white;
+            padding: 12px 25px;
+            border: none;
+            border-radius: 50px;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin: 20px 0;
+        }
+
+        .upload-btn:hover {
+            background-color: #1565c0;
+        }
+
+        .output {
             background-color: #f4f4f4;
-            padding: 15px;
+            padding: 20px;
+            border-radius: 10px;
             border: 1px solid #ccc;
             white-space: pre-wrap;
+            overflow-x: auto;
+            max-height: 300px;
+            font-size: 0.9rem;
+        }
+
+        .footer {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 0.8rem;
+            color: #757575;
+        }
+
+        .footer a {
+            color: #1e88e5;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
 
-    <h1>Excel to JSON Converter</h1>
-    <input type="file" id="upload" />
-    <h3>JSON Output:</h3>
-    <pre id="json-output"></pre>
+    <div class="container">
+        <h1>Excel to JSON Converter</h1>
+
+        <div class="upload-box">
+            <label for="upload">Select an Excel file:</label>
+            <input type="file" id="upload" />
+        </div>
+
+        <button class="upload-btn" onclick="handleFile()">Convert to JSON</button>
+
+        <h3>JSON Output:</h3>
+        <pre class="output" id="json-output"></pre>
+
+        <div class="footer">
+            Built with ❤️ by <a href="https://www.linkedin.com/in/anuragshahi9911/">Anurag Shahi</a>
+        </div>
+    </div>
 
     <script>
-        document.getElementById('upload').addEventListener('change', handleFile, false);
+        function handleFile() {
+            const fileInput = document.getElementById('upload');
+            const file = fileInput.files[0];
 
-        function handleFile(event) {
-            const file = event.target.files[0];
             if (!file) {
                 alert("Please select a file.");
                 return;
@@ -47,40 +147,11 @@
                 const firstSheetName = workbook.SheetNames[0];
                 const worksheet = workbook.Sheets[firstSheetName];
 
-                // Convert worksheet to a 2D array
-                const sheetData = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
+                // Convert worksheet to JSON
+                const jsonOutput = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
 
-                // Process the header row
-                const headers = sheetData[0];
-                const entityTypeIndex = headers.indexOf("entity_type (Business)");
-                const brandIdIndex = headers.indexOf("brand_id / brand_company_id (Business)");
-                const accountIdIndex = headers.indexOf("account_id (Ads)");
-
-                // Object to store the result
-                const result = {};
-
-                // Iterate over the data rows (starting from the second row)
-                for (let i = 1; i < sheetData.length; i++) {
-                    const row = sheetData[i];
-                    const accountId = row[accountIdIndex];
-                    const brandId = row[brandIdIndex];
-
-                    // Check if accountId and brandId are valid (not null, undefined, or empty strings)
-                    if (!accountId || !brandId) {
-                        continue; // Skip this row if invalid
-                    }
-
-                    // Initialize an array for the accountId if it doesn't exist yet
-                    if (!result[accountId]) {
-                        result[accountId] = [];
-                    }
-
-                    // Add the brandId to the array for the corresponding accountId
-                    result[accountId].push(brandId);
-                }
-
-                // Display the JSON output
-                document.getElementById('json-output').textContent = JSON.stringify(result, null, 2);
+                // Display the JSON content
+                document.getElementById('json-output').textContent = JSON.stringify(jsonOutput, null, 2);
             };
 
             reader.readAsArrayBuffer(file);
