--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             align-items: center;
             min-height: 100vh;
             padding: 20px;
+            background-image: url('./excel\ to\ json.webp');
         }
 
         h1 {
@@ -36,6 +37,7 @@
             padding: 30px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
+           
         }
 
         .upload-box {
