--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             font-weight: 600;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            margin-top: 20px;
+            margin: 20px 0;
         }
 
         .upload-btn:hover {
@@ -164,7 +164,7 @@
         <pre class="output" id="json-output"></pre>
 
         <div class="footer">
-            Built with ❤️ by <a href="https://anuragshahi9911.github.io/excel-to-json/">Anurag Shahi</a>
+            Built with ❤️ by <a href="https://www.linkedin.com/in/anuragshahi9911/">Anurag Shahi</a>
         </div>
     </div>
 
