--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
     <!-- Open Graph Meta Tags for Social Sharing -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anuragshahi9911.github.io/excel-to-json/">
+    <meta property="og:url" content="https://anuragshahi9911.github.io/excel2json/">
     <meta property="og:title" content="Excel to JSON Converter Online - Free & Simple Tool">
     <meta property="og:description" content="Convert Excel files to JSON format quickly and easily with our free online Excel to JSON converter. No installation required.">
-    <meta property="og:image" content="https://anuragshahi9911.github.io/excel-to-json/excel%20to%20json.webp">
+    <meta property="og:image" content="https://anuragshahi9911.github.io/excel2json/excel%20to%20json.webp">
 
     <!-- Twitter Card Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anuragshahi9911.github.io/excel-to-json/">
+    <meta property="twitter:url" content="https://anuragshahi9911.github.io/excel2json/">
     <meta property="twitter:title" content="Excel to JSON Converter Online - Free & Simple Tool">
     <meta property="twitter:description" content="Convert Excel files to JSON format quickly and easily with our free online Excel to JSON converter. No installation required.">
-    <meta property="twitter:image" content="https://anuragshahi9911.github.io/excel-to-json/excel%20to%20json.webp">
+    <meta property="twitter:image" content="https://anuragshahi9911.github.io/excel2json/excel%20to%20json.webp">
 
     <!-- Search Engine Optimization Meta Tags -->
     <meta name="robots" content="index, follow">
@@ -33,11 +33,11 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Excel to JSON Converter Online",
-      "url": "https://anuragshahi9911.github.io/excel-to-json/",
+      "url": "https://anuragshahi9911.github.io/excel2json/",
       "description": "Convert Excel files to JSON format quickly and easily with our free online Excel to JSON converter.",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://anuragshahi9911.github.io/excel-to-json/?q={search_term_string}",
+        "target": "https://anuragshahi9911.github.io/excel2json/?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
